--- a/style.css
+++ b/style.css
@@ -947,7 +947,7 @@ footer form button{
 footer form button:hover{
   background-color:#eee;
 }
-::placeholder{
+footer input::placeholder{
   color:white;
 }
 .copyright{
